miniconf/tests/ui/empty-array.rs
use miniconf::TreeSchema;

fn main() {
    const _: usize = <[usize; 0]>::SHAPE.max_depth;
}
